# ArbitrageTrader

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  results.tsv
ArbitrageTrader/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md
claude_session/: current.md
config/: arbitrum_live_execution_config.json  multichain_discovery_config.json  multichain_onchain_config.json  optimism_live_execution_config.json
contracts/: FlashArbExecutor.sol  deploy.sh
docs/: AutoresearchGuide.md  CryptoArbitrageBotGuide.md  PolymarketBotGuide.md  api.md  arbitrage_scanner_doc.md  arbitrage_trader_Architecture_aws.md  arbitragescanner_video_summary.md  architecture.md  autoresearch.md  crypto_arbitrage_bot_build_guide.md  crypto_arbitrage_bot_video_content_only.md  crypto_arbitrage_bot_video_summary.md  deployment.md  execution_phase_status.md  go_live_checklist.md  platform_migration_log.md  platform_migration_plan.md  polymarket_ai_arbitrage_downloaded_summary.md  polymarket_ai_arbitrage_video_summary.md  postgres_migration_plan.md  rpc_providers.md
metrics-harmony/: pom.xml
monitoring/: loki.yml  nginx.conf  prometheus.yml
pythonML/: BayesianLogisticRegression.py  LogisticRegression.py
scripts/: backup_postgres.sh  check_readiness.py  deploy_prod.sh  install-cron.sh  phase_a_admin.sh  phase_a_host.sh  port_neon_to_local.sh  restore_from_s3.sh  run_local.sh  setup_env.py  test_rpc_endpoints.py  validate_chains.py
src/: bot.py  chain_executor.py  config.py  contracts.py  env.py  event_listener.py  executor.py  log.py  (+19 more)
(+223 files in other folders)
