[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage-bot"
version = "0.1.0"
description = "Production DEX arbitrage trading bot with 12-chain support, pipeline execution, and dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "web3>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
